--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,14 @@ ul {
 }
 
 .header__nav {
+  width: 35%;
   padding-top: 1%;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  margin-left: 60%;
+  margin-left: 54%;
 }
 
 .nav__item {
@@ -199,7 +200,6 @@ ul {
 
 .life__container {
   background-color: #45446c;
-  padding-bottom: 8%;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -224,16 +224,6 @@ ul {
   padding-bottom: 3.5%;
   border-radius: 3%;
   margin-left: 44%;
-}
-
-.life-container__img {
-  position: absolute;
-}
-
-.life__img {
-  position: absolute;
-  left: 800px;
-  top: -200px;
 }
 
 .emp__for {
@@ -335,3 +325,16 @@ ul {
   color: white;
   font-size: 18px;
 }
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) { ... }
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) { ... }
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) { ... }
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) { ... }
+
