--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,9 @@ ul {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  margin-left: 54%;
+  margin:0 auto;
+  margin-left: 50%;
+
 }
 
 .nav__item {
@@ -108,15 +110,10 @@ ul {
 }
 
 .student__for,
-.emp__for{
-  margin-left: 73%;
+.emp__for {
   font-size: 25px;
   text-transform: uppercase;
   font-weight: bold;
-}
-
-.emp__for {
-  margin-left: 23%;
 }
 
 .student__block,
@@ -140,7 +137,16 @@ ul {
   padding-bottom: 7%;
   text-align: center;
   font-size: 23px;
+  padding-top: 0%;
+}
+
+.student__text {
   padding-top: 3%;
+}
+
+.student__img {
+  width: 100%;
+  height: auto;
 }
 
 .emp__button {
@@ -156,8 +162,34 @@ ul {
 }
 
 
+
+.emp-text__container {
+  width: 50%;
+}
+
+.student__image,
+.life__image,
+.emp__img,
+.form__img
+ {
+  width:100%;
+  height: auto;
+}
+
+.emp__img {
+  margin-right: 3%;
+  margin-top: 20%;
+  width: 100%;
+  height: auto;
+}
+
+.student__image {
+  margin-top: -15%;
+}
+
+
 .student__text--end {
-  padding-bottom: 25%;
+  padding-bottom: 13%;
 }
 
 
@@ -177,12 +209,12 @@ ul {
 
 .student__button {
   text-decoration: none;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-left: 6%;
+  padding-right: 6%;
+  padding-top: 3.5%;
+  padding-bottom: 3.5%;
   border-radius: 3%;
-  margin-left: 28%;
+  margin-left: 30%;
 }
 
 .emp-advantages__container {
@@ -193,6 +225,7 @@ ul {
 .advantages__block {
   outline: 1px solid black;
 }
+
 
 .life__wrapper {
   width: 50%;
@@ -205,6 +238,11 @@ ul {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
+}
+
+.life-container__img {
+  margin-top: -10%;
+  margin-left: 2%;
 }
 
 .life__headline {
@@ -220,10 +258,15 @@ ul {
   text-decoration: none;
   padding-left: 3.5%;
   padding-right: 3.5%;
-  padding-top: 3.5%;
-  padding-bottom: 3.5%;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
   border-radius: 3%;
   margin-left: 44%;
+}
+
+.life__img {
+  width: 100%;
+  height: auto;
 }
 
 .emp__for {
@@ -298,10 +341,10 @@ ul {
   color: white;
   text-transform: uppercase;
   font-size: 18px;
-  padding-left: 7%;
-  padding-right: 7%;
-  padding-top: 6%;
-  padding-bottom: 6%;
+  padding-left: 6%;
+  padding-right: 6%;
+  padding-top: 4%;
+  padding-bottom: 4%;
   border-radius: 3%;
   margin-left: 24%;
   margin-top: 10%;
@@ -326,15 +369,66 @@ ul {
   font-size: 18px;
 }
 
-// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 991.98px) {
+  .header__logo {
+    font-size:23px;
+  }
+
+  .nav__item {
+    font-size:18px;
+  }
+
+  .header__link {
+    margin-left: 39%;
+  }
+
+  .header__motto {
+    padding-left: 18%;
+    padding-right: 18%;
+    font-size:24px;
+  }
+
+  .main__headline {
+    font-size: 38px;
+  }
+
+  .student__text {
+    font-size:22px;
+  }
+
+  .student__button {
+    margin-left: 24%;
+  }
+
+  .advantages__item {
+    font-size:20px;
+  }
+
+  .advantages__text {
+    font-size:17px;
+  }
+
+  .life__header {
+    font-size:34px;
+  }
+
+  .life__button {
+    margin-left: 36%;
+  }
+
+  .emp__text {
+    font-size:22px;
+  }
+
+  .emp__button {
+    margin-left: 29%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+
+}
+
 @media (max-width: 575.98px) { ... }
 
-// Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) { ... }
-
-// Medium devices (tablets, less than 992px)
-@media (max-width: 991.98px) { ... }
-
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) { ... }
-
