--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ ul {
   display: -o-flex;
   display: flex;
   justify-content: space-around;
-  padding-bottom: 7%;
+  padding-bottom: 15%;
 }
 
 
@@ -198,7 +198,7 @@ ul {
 
 
 .student__advantages {
-  padding-bottom: 20%;
+  padding-bottom: 5%;
 }
 
 .student-advantages__container,
@@ -901,7 +901,16 @@ ul {
     margin-left: 35%;
   }
 
-
-
-
  }
+
+/* effects */
+
+
+.button:hover {
+  background-color: #ffdc5a;
+}
+
+.nav__item a:hover {
+  text-decoration: underline;
+  font-weight: 300;
+}
