--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,13 @@ ul {
   text-transform: uppercase;
 }
 
-.student__for,
-.emp__for {
+.student__for {
   font-size: 25px;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.student__block,
-.emp__block{
+.student__block {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -131,8 +129,7 @@ ul {
   padding-top: 10%;
 }
 
-.student__text,
-.emp__text {
+.student__text {
   padding-bottom: 7%;
   text-align: center;
   font-size: 23px;
@@ -156,36 +153,16 @@ ul {
   padding-left: 40%;
 }
 
-.emp__button {
-    margin-left: 34%;
-    text-decoration: none;
-    padding-left: 5%;
-    padding-right: 4%;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    font-size: 20px;
-    margin-top: 5%;
-  }
-}
-
-.emp-text__container {
-  width: 50%;
-}
-
 .student__image,
 .life__image,
-.emp__img,
 .form__img
  {
   width:100%;
   height: auto;
 }
 
-.emp__img {
-  margin-right: 3%;
-  margin-top: 20%;
-  width: 100%;
-  height: auto;
+.form__img {
+  padding-top: 20%;
 }
 
 .student__image {
@@ -304,6 +281,94 @@ ul {
   color: #45446c;
 }
 
+/* FAQ begin*/
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
+.faq-wrapper {
+  width: 60%;
+}
+
+.faq-header{
+  font-size: 42px;
+  border-bottom: 1px dotted #ccc;
+  padding-left: 15%;
+  padding-bottom: 5%;
+}
+
+.faq-content {
+  margin: 0 auto;
+}
+
+.faq-question {
+  padding: 2%;
+  border-bottom: 1px dotted #ccc;
+}
+
+.panel-title {
+  font-size: 24px;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding-top:1.5% ;
+  padding-bottom:1% ;
+  padding-left:8% ;
+  display: block;
+  cursor: pointer;
+}
+
+.panel-content {
+  font-size: 20px;
+  padding: 0px 10%;
+  margin: 0 5%;
+  height: 0;
+  overflow: hidden;
+  z-index: -1;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease;
+}
+
+.panel:checked ~ .panel-content{
+  height: auto;
+  opacity: 1;
+  padding: 14px;
+}
+
+.plus {
+  position: absolute;
+  margin-left: 2%;
+  margin-top: 0.5%;
+  z-index: 5;
+  font-size: 42px;
+  line-height: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -o-transition: .2s ease;
+  transition: .2s ease;
+}
+
+.panel:checked ~ .plus {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.panel {
+  display: none;
+}
+
+/* FAQ end */
+
+
 .form__container {
   display: -webkit-flex;
   display: -moz-flex;
@@ -315,15 +380,19 @@ ul {
   padding-bottom: 5%;
 }
 
+  .form__block {
+    background-color:#ffd22d;
+  }
+
 .form__wrapper {
-  width: 25%;
+  width: 30%;
+  margin: 0 auto;
 }
 
 .form__name,
 .form__email,
 .form__textarea {
-  width: 80%;
-
+  width: 100%;
 }
 
 .form__name,
@@ -418,8 +487,6 @@ ul {
     font-size: 16px;
   }
 
-
-
   .advantages__item {
     font-size:20px;
   }
@@ -483,8 +550,8 @@ ul {
   .form__img {
     width: 80%;
     margin-left: 10%;
+    padding-top: 16%;
   }
-
 }
 
 @media (max-width: 767.98px) {
@@ -914,82 +981,4 @@ ul {
 .nav__item a:hover {
   text-decoration: underline;
   font-weight: 300;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-
-
-.faq-header{
-  font-size: 42px;
-  border-bottom: 1px dotted #ccc;
-  padding: 24px;
-}
-
-.faq-content {
-  margin: 0 auto;
-}
-
-.faq-question {
-  padding: 20px 0;
-  border-bottom: 1px dotted #ccc;
-}
-
-.panel-title {
-  font-size: 24px;
-  width: 100%;
-  position: relative;
-  margin: 0;
-  padding: 10px 10px 0 48px;
-  display: block;
-  cursor: pointer;
-}
-
-.panel-content {
-  font-size: 20px;
-  padding: 0px 14px;
-  margin: 0 40px;
-  height: 0;
-  overflow: hidden;
-  z-index: -1;
-  position: relative;
-  opacity: 0;
-  -webkit-transition: .4s ease;
-  -moz-transition: .4s ease;
-  -o-transition: .4s ease;
-  transition: .4s ease;
-}
-
-.panel:checked ~ .panel-content{
-  height: auto;
-  opacity: 1;
-  padding: 14px;
-}
-
-.plus {
-  position: absolute;
-  margin-left: 20px;
-  margin-top: 4px;
-  z-index: 5;
-  font-size: 42px;
-  line-height: 100%;
-  -webkit-user-select: none;    
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  -webkit-transition: .2s ease;
-  -moz-transition: .2s ease;
-  -o-transition: .2s ease;
-  transition: .2s ease;
-}
-
-.panel:checked ~ .plus {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.panel {
-  display: none;
 }
