--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ ul {
   display: -o-flex;
   display: flex;
   justify-content: space-around;
-  padding-bottom: 15%;
+  padding-bottom: 20%;
 }
 
 
@@ -162,7 +162,9 @@ ul {
 }
 
 .form__img {
-  padding-top: 20%;
+  width: 125%;
+  padding-top: 50%;
+  padding-left: 20%;
 }
 
 .student__image {
@@ -171,7 +173,7 @@ ul {
 
 
 .student__text--end {
-  padding-bottom: 13%;
+  padding-bottom: 20%;
 }
 
 
@@ -285,14 +287,15 @@ ul {
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
 .faq-wrapper {
-  width: 60%;
+  width: 100%;
 }
 
 .faq-header{
   font-size: 42px;
   border-bottom: 1px dotted #ccc;
-  padding-left: 15%;
-  padding-bottom: 5%;
+  padding-top: 5%;
+  padding-bottom: 1%;
+  text-align: center;
 }
 
 .faq-content {
@@ -300,7 +303,7 @@ ul {
 }
 
 .faq-question {
-  padding: 2%;
+  padding: 1%;
   border-bottom: 1px dotted #ccc;
 }
 
@@ -309,9 +312,9 @@ ul {
   width: 100%;
   position: relative;
   margin: 0;
-  padding-top:1.5% ;
+  padding-top:1% ;
   padding-bottom:1% ;
-  padding-left:8% ;
+  padding-left:5% ;
   display: block;
   cursor: pointer;
 }
@@ -376,16 +379,12 @@ ul {
   display: -o-flex;
   display: flex;
   justify-content: space-around;
-  padding-top: 8%;
-  padding-bottom: 5%;
+  background-color: #ffd22d;
+  margin-top: 5%;
 }
 
-  .form__block {
-    background-color:#ffd22d;
-  }
-
 .form__wrapper {
-  width: 30%;
+  width: 50%;
   margin: 0 auto;
 }
 
@@ -398,8 +397,19 @@ ul {
 .form__name,
 .form__email,
 .form__textarea {
-  padding: 5%;
+  padding: 6%;
   font-size: 16px;
+  margin-top:7%;
+  margin-bottom: 5%;
+  border-radius: 25px;
+  border:none;
+  background-color: #d5dae0;
+  color: #45446c;
+  font-size: 22px;
+}
+
+::placeholder {
+  color: #45446c;
 }
 
 .form {
@@ -407,25 +417,28 @@ ul {
   margin-left: 5%;
 }
 
-.form__text {
-  margin-bottom: 3%;
-  font-size: 20px;
-}
-
 .form__input {
-  background-color: #ffd22d;
-  color: white;
+  background-color: #45446c;
+  color: #ffd22d;
   text-transform: uppercase;
   font-size: 18px;
-  padding-left: 6%;
-  padding-right: 6%;
-  padding-top: 4%;
-  padding-bottom: 4%;
+  padding-left: 37%;
+  padding-right: 37%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   border-radius: 3%;
-  margin-left: 24%;
-  margin-top: 10%;
-  box-shadow: 0 8px 0 0 #f1a32f;
-  font-weight: 600;
+  margin-left: 7%;
+  margin-top: 5%;
+  margin-bottom: 15%;
+  border: none;
+}
+
+.form__headline {
+  width: 45%;
+  font-size: 38px;
+  padding-top: 5%;
+  padding-left: 27%;
+  text-align: center;
 }
 
 
