--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ ul {
 /* Сделать бургер меню */
 
 .header {
-  background-image: linear-gradient(to right top, #45446c, #444374, #42417d, #404085, #3e3e8d);
+  background-image: linear-gradient(to right top, #5199ff, #4187f0, #3074e0, #1e63d1, #0351c1);
 }
 
 .header__block {
@@ -67,27 +67,39 @@ ul {
 }
 
 .header__container {
-  padding-bottom: 9%;
+  padding-bottom: 8%;
+}
+
+.header__main {
+  color: white;
+  text-align: center;
+  padding-top: 7%;
+  font-size: 78px;
+  animation-name: bounceInDown;
+  animation-duration: 2s;
+  margin-bottom: 2%;
 }
 
 .header__motto {
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 8%;
   text-align: center;
-  padding-left: 25%;
-  padding-right: 25%;
-  font-size:25px;
+  padding-left: 15%;
+  padding-right: 15%;
+  font-size:22px;
   color: white;
   font-weight: 600;
+  animation-name: bounceInLeft;
+  animation-duration: 3s;
 }
 
 .header__link {
-  margin-left: 41% ;
+  margin-left: 40% ;
   padding-left: 3.5%;
   padding-right: 3.5%;
   padding-top: 1.5%;
   padding-bottom: 1.5%;
   border-radius: 3%;
+  font-weight:600;
 }
 
 .button {
@@ -102,9 +114,31 @@ ul {
 .main__headline {
   text-align: center;
   padding-bottom: 2%;
-  padding-top: 4%;
+  padding-top: 7%;
   font-size: 50px;
   text-transform: uppercase;
+}
+
+.header__icon {
+  width: 100%;
+  height: auto;
+  padding-bottom: 80%;
+}
+
+.header__arrow {
+  width: 4%;
+  height: 4%;
+  border-radius: 50px;
+  margin: 0 auto;
+  animation-name:bounce;
+  animation-duration: 2s;
+  animation-delay: 2s;
+}
+
+.header__arrow:hover {
+  animation-name: bounce;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
 
 .student__for {
@@ -217,7 +251,7 @@ ul {
 }
 
 .life__container {
-  background-color: #45446c;
+  background-color: #1965CE;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -264,7 +298,8 @@ ul {
 }
 
 .advantages__image {
-  padding-left: 35%;
+  padding-left: 38%;
+  padding-top: 5%;
 }
 
 .advantages__text {
@@ -993,4 +1028,197 @@ ul {
 .nav__item a:hover {
   text-decoration: underline;
   font-weight: 300;
+}
+
+@keyframes bounceInDown {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -3000px, 0);
+    transform: translate3d(0, -3000px, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 25px, 0);
+    transform: translate3d(0, 25px, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes bounceInLeft {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-3000px, 0, 0);
+    transform: translate3d(-3000px, 0, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(25px, 0, 0);
+    transform: translate3d(25px, 0, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(5px, 0, 0);
+    transform: translate3d(5px, 0, 0);
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes bounceInLeft {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-3000px, 0, 0);
+    transform: translate3d(-3000px, 0, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(25px, 0, 0);
+    transform: translate3d(25px, 0, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(5px, 0, 0);
+    transform: translate3d(5px, 0, 0);
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.bounceInLeft {
+  -webkit-animation-name: bounceInLeft;
+  animation-name: bounceInLeft;
+}
+
+
+@-webkit-keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
+}
+
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
+}
+
+.bounce {
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
+  -webkit-transform-origin: center bottom;
+  transform-origin: center bottom;
 }
