--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ ul {
 
 .header {
   background-image: linear-gradient(to right top, #5199ff, #4187f0, #3074e0, #1e63d1, #0351c1);
+  background-image:url(../img/background.jpg);
+  background-position: center;
 }
 
 .header__block {
