--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,6 @@ ul {
 
 .header {
   background-image: linear-gradient(to right top, #5199ff, #4187f0, #3074e0, #1e63d1, #0351c1);
-  background-image:url(../img/background.jpg);
-  background-position: center;
 }
 
 .header__block {
@@ -76,7 +74,7 @@ ul {
   color: white;
   text-align: center;
   padding-top: 7%;
-  font-size: 78px;
+  font-size: 60px;
   animation-name: bounceInDown;
   animation-duration: 2s;
   margin-bottom: 2%;
@@ -87,8 +85,9 @@ ul {
   text-align: center;
   padding-left: 15%;
   padding-right: 15%;
-  font-size:22px;
+  font-size:24px;
   color: white;
+  opacity:0.75;
   font-weight: 600;
   animation-name: bounceInLeft;
   animation-duration: 3s;
@@ -124,7 +123,7 @@ ul {
 .header__icon {
   width: 100%;
   height: auto;
-  padding-bottom: 80%;
+  padding-bottom: 220%;
 }
 
 .header__arrow {
@@ -197,7 +196,7 @@ ul {
 }
 
 .form__img {
-  width: 125%;
+  width: 100%;
   padding-top: 50%;
   padding-left: 20%;
 }
@@ -253,7 +252,7 @@ ul {
 }
 
 .life__container {
-  background-color: #1965CE;
+  background-color: #3074e0;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -415,12 +414,11 @@ ul {
   display: -o-flex;
   display: flex;
   justify-content: space-around;
-  background-color: #ffd22d;
   margin-top: 5%;
 }
 
 .form__wrapper {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
 }
 
@@ -454,19 +452,20 @@ ul {
 }
 
 .form__input {
-  background-color: #45446c;
-  color: #ffd22d;
+  background-color: #ffd22d;
+  color: white;
   text-transform: uppercase;
   font-size: 18px;
-  padding-left: 37%;
-  padding-right: 37%;
+  padding-left: 32%;
+  padding-right: 32%;
   padding-top: 2%;
   padding-bottom: 2%;
   border-radius: 3%;
-  margin-left: 7%;
+  margin-left: 11%;
   margin-top: 5%;
   margin-bottom: 15%;
   border: none;
+  font-weight:600;
 }
 
 .form__headline {
@@ -479,19 +478,32 @@ ul {
 
 
 .footer {
-  background-color: #45446c;
+  background-color: #3074e0;
 }
 
 .footer__container {
   width: 80%;
   margin: 0 auto;
   padding:1% 0%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer__copyright {
   text-align: center;
   color: white;
   font-size: 18px;
+}
+
+.footer__policy {
+  text-decoration: none;
+  color: white;
+  padding-top: 1.7%;
+}
+
+.footer__policy:hover {
+  text-decoration:underline;
+  font-weight: 600;
 }
 
 @media (max-width: 991.98px) {
@@ -1010,7 +1022,6 @@ ul {
   }
 
   .form__container {
-    background-color:#45446c;
     padding-top: 10%;
   }
 
