--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ ul {
   text-align: center;
   padding-bottom: 2%;
   padding-top: 7%;
-  font-size: 50px;
+  font-size: 25px;
   text-transform: uppercase;
 }
 
@@ -515,6 +515,10 @@ ul {
     margin-left: 42%;
   }
 
+  .header__main {
+    font-size: 45px;
+  }
+
   .nav__item {
     font-size:18px;
   }
@@ -523,14 +527,18 @@ ul {
     margin-left: 39%;
   }
 
-  .header__motto {
-    padding-left: 18%;
-    padding-right: 18%;
-    font-size:24px;
+  .header__icon {
+    margin-left: 35%;
   }
 
   .main__headline {
-    font-size: 35px;
+    font-size: 20px;
+  }
+
+  .header__motto {
+    padding-left: 18%;
+    padding-right: 18%;
+    font-size:19px;
   }
 
   .student__img {
@@ -634,15 +642,20 @@ ul {
     font-size: 15px;
   }
 
+  .header__main {
+    font-size: 40px;
+  }
+
   .header__motto {
-    padding-left: 18%;
-    padding-right: 18%;
+    padding-left: 14%;
+    padding-right: 14%;
     font-size:20px;
   }
 
   .main__headline {
-    font-size: 30px;
+    font-size: 16px;
   }
+
 
   .student__img {
     width: 80%;
@@ -694,20 +707,20 @@ ul {
     margin-left: 15%;
   }
 
-  .emp__text {
-    font-size:18px;
-  }
-
-  .emp__button {
-    margin-left: 31%;
-    padding-left: 3%;
-    padding-right: 3%;
-    font-size:14px;
-  }
-
   .advantages__image {
     padding-left: 33%;
     width: 41%;
+  }
+
+  .faq-header {
+    font-size: 30px;
+    padding-bottom: 4%;
+  }
+
+  .panel-title {
+    font-size: 20px;
+    padding-left: 8%;
+    padding-top: 2%;
   }
 
 
@@ -732,10 +745,6 @@ ul {
 
   .header__link {
     font-size: 14px;
-  }
-
-  .main__headline {
-    font-size: 26px;
   }
 
   .student__img {
@@ -854,10 +863,6 @@ ul {
 
    .header__link {
      font-size: 12px;
-   }
-
-   .main__headline {
-     font-size: 22px;
    }
 
    .student__text {
