--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,13 @@ ul {
 
 .main__headline {
   text-align: center;
-  padding-bottom: 2%;
-  padding-top: 7%;
-  font-size: 25px;
-  text-transform: uppercase;
+  padding-bottom: 6%;
+  padding-top: 6%;
+  font-size: 30px;
+  margin-top: 0;
+  font-family: 'Lato', sans-serif;
+  padding-left: 7%;
+  padding-right: 7%;
 }
 
 .header__icon {
@@ -158,6 +161,10 @@ ul {
   padding-bottom: 20%;
 }
 
+.student-text__container {
+  width: 40%;
+  padding-top: 5%;
+}
 
 .student__text--begin {
   padding-top: 10%;
@@ -166,21 +173,22 @@ ul {
 .student__text {
   padding-bottom: 7%;
   text-align: center;
-  font-size: 23px;
+  font-size: 26px;
   padding-top: 0%;
 }
 
 .student__text {
   padding-top: 0%;
   margin: 0%;
-  padding-bottom: 7%;
-  padding-top: 7%;
+  padding-bottom: 4%;
+  padding-top: 4%;
 
 }
 
 .student__img {
   width: 100%;
   height: auto;
+  padding-top: 20%;
 }
 
 .student__arrow {
@@ -197,7 +205,7 @@ ul {
 
 .form__img {
   width: 100%;
-  padding-top: 50%;
+  padding-top: 40%;
   padding-left: 20%;
 }
 
@@ -205,14 +213,13 @@ ul {
   margin-top: -15%;
 }
 
-
 .student__text--end {
   padding-bottom: 20%;
 }
 
 
 .student__advantages {
-  padding-bottom: 5%;
+  padding-bottom: 2%;
 }
 
 .student-advantages__container,
@@ -236,14 +243,17 @@ ul {
 }
 
 
-
 .emp-advantages__container {
   padding-top: 8%;
 }
 
-
 .advantages__block {
-  outline: 1px solid black;
+  background-color: #faf9f9;
+  transition: transform .2s;
+}
+
+.advantages__block:hover {
+  transform: scale(1.10);
 }
 
 
@@ -305,7 +315,10 @@ ul {
 
 .advantages__text {
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
+  padding-bottom: 9%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .advantages__item {
@@ -417,6 +430,10 @@ ul {
   margin-top: 5%;
 }
 
+.form__block {
+  padding-bottom: 5%;
+}
+
 .form__wrapper {
   width: 40%;
   margin: 0 auto;
@@ -435,15 +452,15 @@ ul {
   font-size: 16px;
   margin-top:7%;
   margin-bottom: 5%;
-  border-radius: 25px;
-  background-color: #d5dae0;
   color: #45446c;
   font-size: 22px;
-  border: 2px solid #C2BDBD;
+  border: none;
+  border-bottom: 2px solid #C2BDBD;
 }
 
 ::placeholder {
   color: #45446c;
+  font-size: 15px;
 }
 
 .form {
@@ -456,23 +473,22 @@ ul {
   color: white;
   text-transform: uppercase;
   font-size: 18px;
-  padding-left: 32%;
-  padding-right: 32%;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-left: 12%;
+  padding-right: 12%;
+  padding-top: 3.5%;
+  padding-bottom: 3.5%;
   border-radius: 3%;
-  margin-left: 11%;
-  margin-top: 5%;
+  margin-left: 30%;
+  margin-top: 10%;
   margin-bottom: 15%;
-  border: none;
   font-weight:600;
+  border:none;
 }
 
 .form__headline {
-  width: 45%;
   font-size: 38px;
-  padding-top: 5%;
-  padding-left: 27%;
+  padding-left: 15%;
+  padding-right: 15%;
   text-align: center;
 }
 
@@ -1240,3 +1256,8 @@ ul {
   -webkit-transform-origin: center bottom;
   transform-origin: center bottom;
 }
+
+
+
+
+
