--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,19 @@ animation: Gradient 7s ease infinite;
   margin: 0 auto;
 }
 
+.header__container {
+  width: 80%;
+  margin: 0 auto;
+  order: -1;
+}
+
+.header__back {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-around;
+}
+
 .header__wrapper {
   display: -webkit-flex;
   display: -moz-flex;
@@ -79,8 +92,8 @@ animation: Gradient 7s ease infinite;
 .header__main {
   color: white;
   text-align: center;
-  padding-top: 7%;
-  font-size: 60px;
+  padding-top: 5%;
+  font-size: 80px;
   animation-name: zoomIn;
   animation-duration: 1s;
   margin-bottom: 2%;
@@ -91,12 +104,13 @@ animation: Gradient 7s ease infinite;
   text-align: center;
   padding-left: 15%;
   padding-right: 15%;
-  font-size:24px;
+  font-size:21px;
   color: white;
   opacity:0.75;
   font-weight: 600;
   animation-name: bounceInLeft;
   animation-duration: 3s;
+  padding-top: 2%;
 }
 
 .header__link {
@@ -119,6 +133,11 @@ animation: Gradient 7s ease infinite;
   font-weight: 600;
 }
 
+.header__img {
+  padding-right: 2%;
+  padding-top: 4%;
+}
+
 .main__headline {
   font-size: 42px;
   border-bottom: 1px dotted #ccc;
@@ -131,7 +150,7 @@ animation: Gradient 7s ease infinite;
 .header__icon {
   width: 100%;
   height: auto;
-  padding-bottom: 150%;
+  padding-bottom: 100%;
 }
 
 .header__arrow {
@@ -1246,7 +1265,7 @@ textarea {
     50%{background-position:82% 100%}
     100%{background-position:19% 0%}
 }
-@keyframes Gradient { 
+@keyframes Gradient {
     0%{background-position:19% 0%}
     50%{background-position:82% 100%}
     100%{background-position:19% 0%}
