--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ animation: Gradient 7s ease infinite;
   color: white;
   text-align: center;
   padding-top: 5%;
-  font-size: 80px;
+  font-size: 68px;
   animation-name: zoomIn;
   animation-duration: 1s;
   margin-bottom: 2%;
@@ -135,12 +135,17 @@ animation: Gradient 7s ease infinite;
 
 .header__img {
   padding-right: 2%;
-  padding-top: 4%;
+  width: 100%;
+  height: auto;
+}
+
+.header__img--block {
+  padding-right: 3%;
+  padding-top: 5%;
 }
 
 .main__headline {
   font-size: 42px;
-  border-bottom: 1px dotted #ccc;
   text-align: center;
   font-weight: 600;
   padding-top: 4%;
@@ -171,8 +176,7 @@ animation: Gradient 7s ease infinite;
 
 .student__headline {
   font-size: 42px;
-  border-bottom: 1px dotted #ccc;
- text-align: center;
+  text-align: center;
   font-weight: 600;
   margin: 0;
   padding-top: 4%;
@@ -220,9 +224,7 @@ animation: Gradient 7s ease infinite;
 }
 
 .student__arrow {
-  padding-left: 40%;
-  width: 20%;
-  padding-right: 10%;
+  margin-left: 40%;
 }
 
 .student__image,
@@ -300,10 +302,10 @@ animation: Gradient 7s ease infinite;
 }
 
 .life__headline {
-  padding-top: 7%;
+  padding-top: 8%;
   color: white;
   padding-left: 15%;
-  font-size:45px;
+  font-size:27px;
   padding-bottom: 5%;
   text-align: center;
 }
@@ -364,7 +366,6 @@ animation: Gradient 7s ease infinite;
 
 .faq-header{
   font-size: 42px;
-  border-bottom: 1px dotted #ccc;
   padding-top: 4%;
   padding-bottom: 4%;
   text-align: center;
@@ -532,7 +533,23 @@ textarea {
   font-weight: 600;
 }
 
+.footer__list {
+  list-style: none;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1%;
+  width: 12%;
+}
+
+.footer__icon:hover {
+  transform: scale(1.15);
+}
+
+
 @media (max-width: 991.98px) {
+
   .header__logo {
     font-size:23px;
   }
@@ -542,7 +559,11 @@ textarea {
   }
 
   .header__main {
-    font-size: 45px;
+    font-size: 38px;
+  }
+
+  .button {
+    font-size: 15px;
   }
 
   .nav__item {
@@ -550,11 +571,15 @@ textarea {
   }
 
   .header__link {
-    margin-left: 39%;
+    margin-left: 33%;
   }
 
   .header__icon {
     margin-left: 35%;
+  }
+
+  .header__container {
+    padding-top: 5%;
   }
 
   .main__headline {
@@ -562,9 +587,7 @@ textarea {
   }
 
   .header__motto {
-    padding-left: 18%;
-    padding-right: 18%;
-    font-size:19px;
+    font-size:14px;
   }
 
   .student__img {
@@ -579,12 +602,11 @@ textarea {
 
   .student__button {
     margin-left: 24%;
-    font-size: 16px;
+    font-size: 13px;
   }
 
   .student__arrow {
-    padding-left: 32%;
-    width:30%;
+    margin-left: 30%;
   }
 
   .advantages__item {
@@ -613,25 +635,8 @@ textarea {
     margin-left: 15%;
   }
 
-  .emp-text__container {
-    width: 50%;
-    margin-left: 5%;
-  }
-
-  .emp__text {
-    font-size:22px;
-  }
-
-  .emp__button {
-    margin-left: 29%;
-    padding-left: 3%;
-    padding-right: 3%;
-    font-size:16px;
-  }
-
-  .emp__img {
-    width: 80%;
-    margin-left: 10%;
+  .life__wrapper {
+    padding-bottom: 5%;
   }
 
   .advantages__image {
@@ -677,18 +682,15 @@ textarea {
   }
 
   .header__link {
-    margin-left: 37%;
-    font-size: 15px;
+    font-size: 12px;
   }
 
   .header__main {
-    font-size: 40px;
+    font-size: 30px;
   }
 
   .header__motto {
-    padding-left: 14%;
-    padding-right: 14%;
-    font-size:20px;
+    font-size: 12px;
   }
 
   .main__headline {
@@ -708,12 +710,16 @@ textarea {
   }
 
   .student__button {
-    margin-left: 15%;
-    font-size: 14px;
+    margin-left: 13%;
+    font-size: 11px;
+  }
+
+  .student-text__container {
+    padding-right: 4%;
   }
 
   .student__arrow {
-    padding-left: 27%;
+    margin-left: 21%;
   }
 
   .advantages__image {
@@ -738,7 +744,7 @@ textarea {
 
   .life__button {
     margin-left: 38%;
-    font-size: 13px;
+    font-size: 10px;
   }
 
   .life__img {
@@ -766,16 +772,17 @@ textarea {
 }
 
 @media (max-width: 625px) {
-  .header__logo {
-    font-size:18px;
-  }
 
   .header__main {
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .header__motto {
-    font-size: 15px;
+    font-size: 12px;
+  }
+
+  .header__container {
+    padding-top: 10%;
   }
 
   .header__nav {
@@ -786,12 +793,16 @@ textarea {
     font-size:15px;
   }
 
-  .header__motto {
-    font-size:18px;
+  .header__link {
+    font-size: 10px;
   }
 
-  .header__link {
-    font-size: 14px;
+  .main__headline {
+    font-size: 26px;
+  }
+
+  .student__headline {
+    font-size: 26px;
   }
 
   .student__img {
@@ -803,7 +814,7 @@ textarea {
   }
 
   .student__arrow {
-    padding-left: 30%;
+    margin-left: 11%;
   }
 
   .student__text {
@@ -818,8 +829,8 @@ textarea {
   }
 
   .student__button {
-    margin-left: 25%;
-    font-size: 12px;
+    margin-left: 14%;
+    font-size: 11px;
   }
 
   .advantages__image {
@@ -828,11 +839,11 @@ textarea {
   }
 
   .advantages__item {
-    font-size:16px;
+    font-size:15px;
   }
 
   .advantages__text {
-    font-size:14px;
+    font-size:10px;
   }
 
   .life__wrapper {
@@ -875,45 +886,50 @@ textarea {
     font-size: 15px;
   }
 
+  .footer__policy {
+    padding-top: 3.7%;
+  }
+
  }
 
- @media (max-width: 525px) {
+@media (max-width: 525px) {
 
-   .header__logo {
-     font-size:16px;
-   }
+  .header__main {
+    font-size: 15px;
+  }
 
-   .header__nav {
-     margin-left: 32%;
-   }
+  .header__motto {
+    font-size: 10px;
+  }
 
-   .nav__item {
+  .header__nav {
+     margin-left: 20%;
+  }
+
+  .nav__item {
      font-size:13px;
-   }
+  }
 
-   .header__motto {
-     font-size:16px;
-   }
+  .header__link {
+     font-size: 10px;
+     margin-left: 25%;
+  }
 
-   .header__link {
-     font-size: 12px;
-   }
-
-   .student__text {
+  .student__text {
      font-size:14px;
-   }
+  }
 
-   .student__button {
+  .student__button {
      font-size: 9px;
-   }
+  }
 
-   .emp__text {
+  .emp__text {
      font-size:14px;
-   }
+  }
 
-   .emp__button {
+  .emp__button {
      font-size:9px;
-   }
+  }
 
   .advantages__image {
     padding-left: 28%;
@@ -926,19 +942,19 @@ textarea {
 
   .life__wrapper {
     width: 90%;
-   }
+  }
 
   .life__headline {
     font-size: 13px;
-   }
+  }
 
   .life__button {
     font-size: 9px;
-   }
+  }
 
    .form__input {
      font-size: 9px;
-   }
+  }
  }
 
  @media (max-width: 480px) {
@@ -948,20 +964,30 @@ textarea {
    }
 
    .header__main {
-     font-size: 24px;
+     font-size: 33px;
+     padding-top: 0;
+   }
+
+   .header__img {
+     display: none;
    }
 
    .header__motto {
-     font-size: 10px;
+     font-size: 14px;
    }
 
    .header__link {
-     margin-left: 35%;
+     margin-left: 40%;
    }
 
    .header__container {
      padding-bottom: 15%;
+     padding-top: 0;
    }
+
+  .advantages__image {
+    padding-left: 23%;
+  }
 
   .student__block {
     display:inline-block;
@@ -979,7 +1005,7 @@ textarea {
   }
 
   .student__button {
-    margin-left: 30%;
+    margin-left: 33%;
   }
 
   .student__advantages {
@@ -995,7 +1021,11 @@ textarea {
   }
 
   .student__arrow {
-    padding-left: 30%;
+    padding-left: 24%;
+  }
+
+  .student__text {
+    font-size: 23px;
   }
 
   .advantages__text {
@@ -1040,12 +1070,26 @@ textarea {
     font-size: 28px;
   }
 
+  .footer__container {
+    flex-direction: column;
+  }
+
+  .footer_link {
+    margin-right: 12%;
+  }
+
   .footer__copyright {
-    font-size: 10px;
+    font-size: 17px;
   }
 
   .footer__policy {
-    font-size: 10px;
+    font-size: 15px;
+    margin-left: 32%;
+  }
+
+  .footer__list {
+    margin-left: 36%;
+    margin-top: 8%;
   }
 
  }
